@@ -10,7 +10,6 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import seedu.address.model.commitment.Lesson;
 import seedu.address.model.tag.ModuleTag;
 
 /**
@@ -24,7 +23,7 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      */
     private static final int DISPLAY_LIMIT = 10;
 
-    private final Set<ModuleTag> modules;
+    private final HashMap<String, ModuleTag> modules;
 
     /**
      * We want to find the modules in common with the user.
@@ -32,15 +31,12 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      */
     private Set<ModuleTag> commonModules;
 
-    private final HashMap<ModuleTag, Set<Lesson>> lessons;
-
     /**
      * Initialises a new ModuleTagSet.
      */
     public ModuleTagSet() {
-        modules = new HashSet<>();
+        modules = new HashMap<>();
         commonModules = new HashSet<>();
-        this.lessons = new HashMap<ModuleTag, Set<Lesson>>();
     }
 
     /**
@@ -48,10 +44,14 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      * Gives access from outside classes to this set.
      */
     public void add(ModuleTag moduleTag) {
-        modules.add(moduleTag);
-        if (!this.lessons.containsKey(moduleTag)) {
-            this.lessons.put(moduleTag, new HashSet<Lesson>());
+        String tagName = moduleTag.tagName;
+        if (!containsKey(tagName)) {
+            modules.put(tagName, moduleTag);
+            return;
         }
+
+        ModuleTag mergedModuleTag = modules.get(tagName).mergeWith(moduleTag);
+        modules.put(tagName, mergedModuleTag);
     }
 
     /**
@@ -60,25 +60,8 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      */
     public void addAll(Collection<? extends ModuleTag> moduleTags) {
         for (ModuleTag tag : moduleTags) {
-            if (tag.isBasicTag()) {
-                modules.add(tag);
-            }
+            add(tag);
         }
-    }
-
-    /**
-     * Adds lesson to the HashMap of sets of lessons.
-     *
-     * @param hash Module to act as the key.
-     * @param lesson Lesson to be inserted.
-     */
-    public void addLesson(ModuleTag hash, Lesson lesson) {
-        if (!this.lessons.containsKey(hash)) {
-            this.lessons.put(hash, new HashSet<Lesson>());
-            // should never come here.
-        }
-        modules.add(hash);
-        this.lessons.get(hash).add(lesson);
     }
 
     /**
@@ -86,8 +69,19 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      * Gives access from outside classes to this set.
      */
     public void remove(ModuleTag moduleTag) {
-        modules.remove(moduleTag);
-        this.lessons.remove(moduleTag);
+        assert canRemove(moduleTag);
+
+        String tagName = moduleTag.tagName;
+        if (!containsKey(tagName)) {
+            return;
+        }
+
+        ModuleTag existingModuleTag = modules.get(tagName);
+        existingModuleTag.removeLessons(moduleTag.getImmutableLessons());
+
+        if (existingModuleTag.getImmutableLessons().size() == 0) {
+            modules.remove(tagName);
+        }
     }
 
     /**
@@ -95,23 +89,24 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      * Gives access from outside classes to this set.
      */
     public void removeAll(Collection<? extends ModuleTag> moduleTags) {
-        for (ModuleTag tag : moduleTags) {
-            if (tag.isBasicTag()) {
-                this.remove(tag);
-            }
-        }
+        moduleTags.stream()
+                .filter(this::canRemove)
+                .forEach(this::remove);
     }
 
     /**
-     * Removes a lesson from the HashMap of Set of Lessons.
-     * @param hash ModuleTag to act as key
-     * @param lesson Lesson to be removed
+     * Returns whether the tag set contains the key.
      */
-    public void removeLesson(ModuleTag hash, Lesson lesson) {
-        if (!this.lessons.containsKey(hash)) {
-            return;
-        }
-        this.lessons.get(hash).remove(lesson);
+    public boolean containsKey(String tagName) {
+        return modules.containsKey(tagName);
+    }
+
+    /**
+     * Returns whether the tag can be removed.
+     */
+    public boolean canRemove(ModuleTag moduleTag) {
+        return modules.containsKey(moduleTag.tagName)
+                && modules.get(moduleTag.tagName).containsLessons(moduleTag.getImmutableLessons());
     }
 
     /**
@@ -127,11 +122,9 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
     public void setCommonModules(Set<ModuleTag> userModuleTags) {
         requireNonNull(userModuleTags);
 
-        // we make a copy so that retainAll does not destroy this set
-        commonModules = new HashSet<>(modules);
-
-        // finds the intersection between user modules and person modules
-        commonModules.retainAll(userModuleTags);
+        commonModules = userModuleTags.stream()
+                .filter(mt -> containsKey(mt.tagName))
+                .collect(Collectors.toSet());
     }
 
     /**
@@ -139,7 +132,7 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      * if modification is attempted.
      */
     public Set<ModuleTag> getImmutableModules() {
-        return Collections.unmodifiableSet(modules);
+        return Set.copyOf(modules.values());
     }
 
     /**
@@ -158,9 +151,9 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      */
     public Set<ModuleTag> getUncommonModuleTags() {
         // finds modules that are not in common with the user.
-        Set<ModuleTag> uncommonModuleTags = new HashSet<>(modules);
-        uncommonModuleTags.removeAll(commonModules);
-        return uncommonModuleTags;
+        return modules.values().stream()
+                .filter(mt -> !commonModules.contains(mt))
+                .collect(Collectors.toSet());
     }
 
     /**
@@ -202,9 +195,8 @@ public class ModuleTagSet implements Comparable<ModuleTagSet> {
      */
     public String lessonsAsStr() {
         String result = "";
-        for (ModuleTag hash: lessons.keySet()) {
-            result = result + hash;
-            result = result + lessons.get(hash).toString();
+        for (ModuleTag hash : modules.values()) {
+            result = result + hash.getImmutableLessons().toString();
             result = result + "\n";
         }
         return result;
